@@ -1,3 +1,0 @@
-Site URL: https://camcaps.to/
-DMCA: https://camcaps.to/static/dmca
-Contact: https://camcaps.to/feedback
