@@ -1,0 +1,3 @@
+Site URL: https://simpvids.com/
+DMCA: https://simpvids.com/static/dmca
+Contact: https://simpvids.com/feedback
