@@ -1,3 +1,4 @@
 [B]Version 1.1.160[/B]
 - tokyomotion - new site
 - terebon - fix listing
+- camcaps.to - replaced by simpvids
